<?xml version="1.0"?>
<package format="3">
  <name>autonomy_ros</name>
  <version>0.0.0</version>

  <description>ROS autonomy bridge for ArduPilot SITL</description>

  <maintainer email="aryan.1352.hajare@gmail.com">aries</maintainer>

  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
